--- a/public/css/style.css
+++ b/public/css/style.css
@@ -272,7 +272,7 @@ Child N°3 will get a delay of 2 + 0.25 * 3 =  2.75s, N°4 will get 2 + 0.25 * 4
     top: 0vh;
   }
   100% {
-    top: -95vh;
+    top: -88vh;
   }
 }
 @keyframes expand-to-bottom {
@@ -406,198 +406,21 @@ body {
   box-shadow: 0 0 1vh black;
 }
 
-.listen-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  background-color: rgba(255, 255, 255, 0.733);
-  position: relative;
-  left: 5%;
-  top: 5%;
-  margin-left: -10vw;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 20vw;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-}
-.listen-content p {
-  box-sizing: border-box;
-  font-family: "Roboto";
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 1vh;
-  overflow: visible;
-  margin: 0 0;
-  width: 45%;
-  height: 30%;
-  color: white;
-  background-color: rgba(255, 255, 255, 0.589);
-  align-items: center;
-  align-content: center;
-  justify-items: space-around;
-  justify-content: space-around;
-  flex-shrink: 1;
-  opacity: 0.8;
-}
-.listen-content p:hover {
-  opacity: 1;
-}
-.listen-content p:hover i {
-  transform: scale(1.1);
-}
-.listen-content p i {
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-items: space-around;
-  justify-content: space-around;
-  /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
-  color: #ffbb00;
-  width: 80%;
-  height: 100%;
-  font-size: 100%;
-  line-height: 100%;
-  flex-wrap: nowrap;
-  flex-shrink: 1;
-  text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
-}
-.listen-content p i:hover {
-  /*color: white;
-  transform: scale(1.1);*/
-}
-.listen-content p:nth-child(1) i {
-  color: #00cc22;
-}
-.listen-content p:nth-child(2) i {
-  background-image: linear-gradient(-45deg, #35c3f3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #fed2ce 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.2);
-}
-.listen-content p:nth-child(3) i {
-  color: #3146ff;
-}
-.listen-content p:nth-child(4) i {
-  background: linear-gradient(270deg, #e100ff, #11c1f7, green);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
-}
-.listen-content p:nth-child(5) i {
-  color: #ff0202;
-}
-.listen-content p:nth-child(6) i {
-  background: linear-gradient(180deg, #030303, #ff9101, white);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
-}
-.listen-content p > :not(i) {
-  font-family: "Cabin Sketch", cursive;
-  font-size: 2vw;
-}
-
-.concert-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.733);
-  position: absolute;
-  left: 5%;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 3vh;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-  display: none;
-}
-
-.band-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.925);
-  position: absolute;
-  left: 5%;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 4vw;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-  display: none;
-  overflow-y: scroll;
-}
-.band-content p {
-  color: black;
-  padding: 0 5vw;
-}
-
-.pictures-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  /*background-color: rgba(255, 255, 255, 0.733);*/
-  position: absolute;
-  left: -100vw;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 3vh;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-}
-.pictures-content img {
-  box-sizing: border-box;
-  max-width: 75vw;
+.band-logo {
   object-fit: cover;
-  max-height: 24%;
-  border-radius: 3%;
-  margin-bottom: 3%;
-  box-shadow: 1vw 1vw 0.5vw black;
+  max-width: 10vh;
+  margin-bottom: 5vh;
+  position: absolute;
+  top: -1vh;
+  right: 2vw;
+  z-index: 5;
+  background-color: rgba(211, 211, 211, 0.5);
+  border-radius: 50%;
+  border: 0.3vh solid orange;
+  box-shadow: -1vh 0 1vh black;
+}
+.band-logo:hover {
+  animation: rotate-twice 2s ease-in-out forwards;
 }
 
 .page-content {
@@ -630,6 +453,12 @@ body {
 .page-content--normal {
   animation: width-to-75 1s ease-in-out forwards;
 }
+.page-content--home {
+  background-color: rgba(65, 65, 65, 0.548);
+}
+.page-content--home img {
+  margin-top: 10vh;
+}
 .page-content--pictures {
   overflow-y: scroll;
   flex-direction: row;
@@ -649,6 +478,11 @@ body {
 }
 .page-content--listen {
   flex-direction: row;
+  align-items: center;
+  align-content: center;
+  justify-items: space-around;
+  justify-content: space-around;
+  background-color: transparent;
 }
 .page-content--listen p {
   box-sizing: border-box;
@@ -658,13 +492,9 @@ body {
   margin-bottom: 1vh;
   overflow: visible;
   margin: 0 0;
-  flex-basis: 33%;
+  flex-basis: 40%;
   color: white;
   background-color: black;
-  align-items: center;
-  align-content: center;
-  justify-items: space-around;
-  justify-content: space-around;
   overflow: hidden;
 }
 .page-content--listen p:hover {
@@ -798,16 +628,16 @@ body {
   flex-direction: column;
   position: fixed;
   top: 100vh;
-  right: 5vw;
+  right: 3vh;
   padding-top: 5vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
-  width: 15vw;
+  max-width: 10vw;
   height: 100vh;
   z-index: 4;
-  justify-content: space-evenly;
   align-items: center;
-  align-content: flex-start;
-  background: linear-gradient(180deg, black, rgba(255, 255, 255, 0.76));
+  align-content: flex-end;
+  justify-content: flex-end;
+  background: linear-gradient(120deg, rgba(255, 255, 255, 0.76), rgba(73, 73, 73, 0.561), rgba(255, 255, 255, 0.76));
 }
 .nav-bar--initial {
   animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
@@ -817,18 +647,6 @@ body {
 }
 .nav-bar--visible {
   animation: expand-to-bottom 1s ease-in-out forwards;
-}
-.nav-bar__image {
-  object-fit: cover;
-  width: 20vw;
-  margin-bottom: 5vh;
-  background-color: rgba(211, 211, 211, 0.5);
-  border-radius: 50%;
-  border: 0.3vh solid orange;
-  box-shadow: -1vh 0 1vh black;
-}
-.nav-bar__image:hover {
-  animation: rotate-twice 2s ease-in-out forwards;
 }
 .nav-bar__item {
   z-index: 99;
@@ -840,9 +658,9 @@ body {
   position: relative;
   bottom: 0;
   /*background-color: rgba(15, 15, 15, 0.308);*/
-  color: black;
-  text-shadow: -0.3vw 0.3vw 0.5vw white;
-  font-family: "Cabin Sketch", cursive;
+  color: white;
+  text-shadow: -0.3vw 0.3vw 0.5vw black;
+  font-family: "Fascinate";
   font-size: 3vw;
   margin-top: 7vh;
 }
@@ -861,7 +679,7 @@ body {
   font-size: 5vh;
 }
 .nav-bar__item i:hover {
-  color: orange;
+  color: white;
   /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
   animation: bumping-icon 1s ease-in-out forwards;
 }
