--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -46,236 +46,20 @@ body {
   box-shadow: 0 0 1vh black;
 }
 
-.listen-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-
-  background-color: rgba(255, 255, 255, 0.733);
-  position: relative;
-  left: 5%;
-  top: 5%;
-  margin-left: -10vw;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 20vw;
-  color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-
-  & p {
-    box-sizing: border-box;
-    font-family: "Roboto";
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 1vh;
-    overflow: visible;
-    margin: 0 0;
-    width: 45%;
-    height: 30%;
-    color: rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0.589);
-    align-items: center;
-    align-content: center;
-    justify-items: space-around;
-    justify-content: space-around;
-    flex-shrink: 1;
-    opacity: 0.8;
-    &:hover {
-      opacity: 1;
-      & i {
-        transform: scale(1.1);
-      }
-    }
-    & i {
-      display: flex;
-      align-items: center;
-      align-content: center;
-      justify-items: space-around;
-      justify-content: space-around;
-      /*background: linear-gradient(120deg, rgb(255, 145, 19) 30%, rgb(255, 254, 254) 60%,rgb(255, 162, 24) 90%);*/
-      color: rgb(255, 187, 0);
-      width: 80%;
-      height: 100%;
-      font-size: 100%;
-      line-height: 100%;
-      flex-wrap: nowrap;
-      flex-shrink: 1;
-
-      text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
-      &:hover {
-        /*color: white;
-        transform: scale(1.1);*/
-      }
-    }
-
-    &:nth-child(1) {
-      & i {
-        color: rgb(0, 204, 34);
-      }
-    }
-
-    &:nth-child(2) {
-      & i {
-        background-image: linear-gradient(
-          -45deg,
-          #35c3f3 0%,
-          #8b9fe8 20%,
-          #e681d8 39%,
-          #ffa9a4 76%,
-          #fed2ce 100%
-        );
-        background-clip: text;
-        -webkit-background-clip: text;
-        color: transparent;
-        text-shadow: 0 0 0.5vw rgb(255, 255, 255, 0.2);
-      }
-    }
-
-    &:nth-child(3) {
-      & i {
-        color: rgb(49, 70, 255);
-      }
-    }
-
-    &:nth-child(4) {
-      & i {
-        background: linear-gradient(
-          270deg,
-          rgb(225, 0, 255),
-          rgb(17, 193, 247),
-          green
-        );
-        background-clip: text;
-        -webkit-background-clip: text;
-        color: transparent;
-        text-shadow: 0 0 0.5vw rgb(255, 255, 255, 0.1);
-      }
-    }
-
-    &:nth-child(5) {
-      & i {
-        color: rgb(255, 2, 2);
-      }
-    }
-
-    &:nth-child(6) {
-      & i {
-        background: linear-gradient(
-          180deg,
-          rgb(3, 3, 3),
-          rgb(255, 145, 1),
-          rgb(255, 255, 255)
-        );
-        background-clip: text;
-        -webkit-background-clip: text;
-        color: transparent;
-        text-shadow: 0 0 0.5vw rgb(255, 255, 255, 0.1);
-      }
-    }
-
-    & > :not(i) {
-      font-family: "Cabin Sketch", cursive;
-      font-size: 2vw;
-    }
-  }
-}
-
-.concert-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.733);
+.band-logo {
+  object-fit: cover;
+  max-width: 10vh;
+  margin-bottom: 5vh;
   position: absolute;
-  left: 5%;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  animation: enter-content-left 0.5s 0s ease-in-out forwards;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 3vh;
-  color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-  display: none;
-}
-
-.band-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.925);
-  position: absolute;
-  left: 5%;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 4vw;
-  color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-  display: none;
-  overflow-y: scroll;
-  & p {
-    color: black;
-    padding: 0 5vw;
-  }
-}
-
-.pictures-content {
-  width: 65vw;
-  height: 85vh;
-  margin-top: 5vh;
-  margin-left: -100vw;
-  /*background-color: rgba(255, 255, 255, 0.733);*/
-  position: absolute;
-  left: -100vw;
-  top: 5%;
-  right: 5%;
-  bottom: 5%;
-  justify-items: flex-start;
-  justify-content: flex-start;
-  font-family: "Cabin Sketch", cursive;
-  font-weight: bold;
-  font-size: 3vh;
-  color: rgb(255, 255, 255);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  z-index: 3;
-  align-content: center;
-  align-items: center;
-  & img {
-    box-sizing: border-box;
-    max-width: 75vw;
-    object-fit: cover;
-    max-height: 24%;
-    border-radius: 3%;
-    margin-bottom: 3%;
-    box-shadow: 1vw 1vw 0.5vw rgb(0, 0, 0);
+  top: -1vh;
+  right: 2vw;
+  z-index: 5;
+  background-color: rgba(211, 211, 211, 0.5);
+  border-radius: 50%;
+  border: 0.3vh solid orange;
+  box-shadow: -1vh 0 1vh black;
+  &:hover {
+    animation: rotate-twice 2s ease-in-out forwards;
   }
 }
 
@@ -311,6 +95,13 @@ body {
     animation: width-to-75 1s ease-in-out forwards;
   }
 
+  &--home {
+    background-color: rgba(65, 65, 65, 0.548);
+    & img {
+      margin-top: 10vh;
+    }
+  }
+
   &--pictures {
     overflow-y: scroll;
     flex-direction: row;
@@ -323,6 +114,8 @@ body {
       object-fit: cover;
       margin-bottom: 3%;
       box-shadow: 1vw 1vw 0.5vw rgb(0, 0, 0);
+      &:hover {
+      }
     }
   }
 
@@ -332,6 +125,11 @@ body {
 
   &--listen {
     flex-direction: row;
+    align-items: center;
+    align-content: center;
+    justify-items: space-around;
+    justify-content: space-around;
+    background-color: transparent;
     & p {
       box-sizing: border-box;
       font-family: "Roboto";
@@ -340,13 +138,10 @@ body {
       margin-bottom: 1vh;
       overflow: visible;
       margin: 0 0;
-      flex-basis: 33%;
+      flex-basis: 40%;
       color: rgb(255, 255, 255);
       background-color: rgb(0, 0, 0);
-      align-items: center;
-      align-content: center;
-      justify-items: space-around;
-      justify-content: space-around;
+
       overflow: hidden;
       &:hover {
         opacity: 1;
@@ -489,6 +284,7 @@ body {
     max-height: 25%;
     background-color: transparent;
     overflow: hidden;
+
     &:hover {
       /*animation: opacity-to-one 5s linear forwards;*/
     }
@@ -522,16 +318,22 @@ body {
   flex-direction: column;
   position: fixed;
   top: 100vh;
-  right: 5vw;
+  right: 3vh;
   padding-top: 5vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
-  width: 15vw;
+  max-width: 10vw;
   height: 100vh;
   z-index: 4;
-  justify-content: space-evenly;
+
   align-items: center;
-  align-content: flex-start;
-  background: linear-gradient(180deg, black, rgba(255, 255, 255, 0.76));
+  align-content: flex-end;
+  justify-content: flex-end;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0.76),
+    rgba(73, 73, 73, 0.561),
+    rgba(255, 255, 255, 0.76)
+  );
 
   &--initial {
     animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
@@ -545,18 +347,6 @@ body {
     animation: expand-to-bottom 1s ease-in-out forwards;
   }
 
-  &__image {
-    object-fit: cover;
-    width: 20vw;
-    margin-bottom: 5vh;
-    background-color: rgba(211, 211, 211, 0.5);
-    border-radius: 50%;
-    border: 0.3vh solid orange;
-    box-shadow: -1vh 0 1vh black;
-    &:hover {
-      animation: rotate-twice 2s ease-in-out forwards;
-    }
-  }
   &__item {
     z-index: 99;
     display: flex;
@@ -567,9 +357,9 @@ body {
     position: relative;
     bottom: 0;
     /*background-color: rgba(15, 15, 15, 0.308);*/
-    color: rgb(0, 0, 0);
-    text-shadow: -0.3vw 0.3vw 0.5vw white;
-    font-family: "Cabin Sketch", cursive;
+    color: rgb(255, 255, 255);
+    text-shadow: -0.3vw 0.3vw 0.5vw black;
+    font-family: "Fascinate";
     font-size: 3vw;
     margin-top: 7vh;
     &--upside-down {
@@ -587,7 +377,7 @@ body {
       padding: 2vh;
       font-size: 5vh;
       &:hover {
-        color: orange;
+        color: rgb(255, 255, 255);
         /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
         animation: bumping-icon 1s ease-in-out forwards;
       }
