--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,19 +252,19 @@ Child N°3 will get a delay of 2 + 0.25 * 3 =  2.75s, N°4 will get 2 + 0.25 * 4
 }
 @keyframes bumping-icon {
   0% {
-    margin-top: -7vh;
+    margin-top: 1vh;
   }
   25% {
-    margin-top: -8vh;
+    margin-top: 0vh;
   }
   50% {
-    margin-top: -7vh;
+    margin-top: 1vh;
   }
   75% {
-    margin-top: -7.5vh;
+    margin-top: 0.5vh;
   }
   100% {
-    margin-top: -7vh;
+    margin-top: 1vh;
   }
 }
 @keyframes send-to-top {
@@ -272,7 +272,7 @@ Child N°3 will get a delay of 2 + 0.25 * 3 =  2.75s, N°4 will get 2 + 0.25 * 4
     top: 0vh;
   }
   100% {
-    top: -88vh;
+    top: -78vh;
   }
 }
 @keyframes expand-to-bottom {
@@ -409,11 +409,11 @@ body {
 
 .band-logo {
   object-fit: cover;
-  max-width: 10vh;
+  width: 10vh;
   margin-bottom: 5vh;
   position: absolute;
   top: -1vh;
-  right: 2vw;
+  right: 1.6vh;
   z-index: 5;
   background-color: rgba(211, 211, 211, 0.5);
   border-radius: 50%;
@@ -426,7 +426,7 @@ body {
 
 .page-content {
   max-width: 75vw;
-  height: 92vh;
+  height: 88vh;
   margin-top: 5vh;
   margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.623);
@@ -447,6 +447,36 @@ body {
   align-items: center;
   justify-content: flex-start;
   text-align: center;
+  margin-bottom: 1vh;
+}
+.page-content p {
+  box-sizing: border-box;
+  font-family: "Roboto";
+  display: flex;
+  flex-direction: row;
+  padding: 5vw 0;
+  overflow: hidden;
+  margin: 0 5%;
+  width: 90%;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.589);
+  align-items: center;
+  align-content: center;
+  justify-items: space-around;
+  justify-content: space-around;
+  flex-shrink: 1;
+  font-size: 5vw;
+  color: black;
+}
+.page-content img {
+  object-fit: cover;
+  display: flex;
+  max-height: 25%;
+  background-color: transparent;
+  overflow: hidden;
+}
+.page-content img:hover {
+  /*animation: opacity-to-one 5s linear forwards;*/
 }
 .page-content--extended {
   animation: width-to-90 1s ease-in-out forwards;
@@ -455,10 +485,17 @@ body {
   animation: width-to-75 1s ease-in-out forwards;
 }
 .page-content--home {
-  background-color: rgba(65, 65, 65, 0.548);
+  background-color: rgba(206, 206, 206, 0.548);
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 .page-content--home img {
   margin-top: 10vh;
+  width: 80%;
+  border-radius: 1vh;
+  box-shadow: 1vh 1vh 0.5vh black;
+  border: 1px solid white;
 }
 .page-content--pictures {
   overflow-y: scroll;
@@ -476,6 +513,20 @@ body {
 }
 .page-content--band {
   overflow-y: scroll;
+  text-align: justify;
+  word-break: break-word;
+  background-color: rgba(0, 0, 0, 0.856);
+}
+.page-content--band p {
+  color: #dbdbdb;
+  background-color: transparent;
+}
+.page-content--concert p {
+  background-color: black;
+  height: 10vh;
+  width: 90%;
+  color: white;
+  margin-bottom: 3vh;
 }
 .page-content--listen {
   flex-direction: row;
@@ -492,11 +543,12 @@ body {
   flex-wrap: wrap;
   margin-bottom: 1vh;
   overflow: visible;
-  margin: 0 0;
+  margin: 1vh 1vh;
   flex-basis: 40%;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.883);
   overflow: hidden;
+  box-shadow: 1vh 1vh 0.5vh black;
 }
 .page-content--listen p:hover {
   opacity: 1;
@@ -573,35 +625,6 @@ body {
   margin-left: -5vw;
   box-shadow: 0 0 1vw black;
 }
-.page-content p {
-  box-sizing: border-box;
-  font-family: "Roboto";
-  display: flex;
-  flex-direction: row;
-  padding: 5vw 0;
-  overflow: hidden;
-  margin: 0 5%;
-  width: 90%;
-  color: white;
-  background-color: rgba(255, 255, 255, 0.589);
-  align-items: center;
-  align-content: center;
-  justify-items: space-around;
-  justify-content: space-around;
-  flex-shrink: 1;
-  font-size: 5vw;
-  color: black;
-}
-.page-content img {
-  object-fit: cover;
-  display: flex;
-  max-height: 25%;
-  background-color: transparent;
-  overflow: hidden;
-}
-.page-content img:hover {
-  /*animation: opacity-to-one 5s linear forwards;*/
-}
 
 .the-man {
   display: flex;
@@ -628,12 +651,11 @@ body {
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 100vh;
+  top: 0;
   right: 3vh;
-  padding-top: 5vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
-  max-width: 10vw;
-  height: 100vh;
+  width: 8vh;
+  height: 95vh;
   z-index: 4;
   align-items: center;
   align-content: flex-end;
@@ -655,15 +677,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 6vw;
+  height: 10vh;
   position: relative;
   bottom: 0;
   /*background-color: rgba(15, 15, 15, 0.308);*/
   color: white;
   text-shadow: -0.3vw 0.3vw 0.5vw black;
   font-family: "Fascinate";
-  font-size: 3vw;
-  margin-top: 7vh;
+  font-size: 1.7vh;
+  margin-top: 1vh;
+}
+.nav-bar__item:hover {
+  color: orange;
 }
 .nav-bar__item--upside-down {
   transform: rotate(180deg);
@@ -674,18 +699,15 @@ body {
   color: white;
 }
 .nav-bar__item i {
-  margin-top: -3vh;
   /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 144, 18) 60%);*/
   padding: 2vh;
   font-size: 5vh;
 }
 .nav-bar__item i:hover {
-  color: white;
-  /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
   animation: bumping-icon 1s ease-in-out forwards;
+  /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
 }
 .nav-bar__item:nth-child(odd) {
-  margin-bottom: 3vh;
   /*box-shadow: -0.1vw -0.1vw 0.1vw rgb(255, 255, 255);*/
   /*border: 0.3vh solid orange;*/
 }
@@ -693,7 +715,6 @@ body {
   /*animation: circle-with-white-shadow 0.3s ease-in-out forwards;*/
 }
 .nav-bar__item:nth-child(even) {
-  margin-bottom: 3vh;
   /*box-shadow: -0.2vh -0.2vh 0.2vh rgb(255, 161, 37);*/
   /*border: 0.3vh solid white;*/
 }
