--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,11 +49,11 @@ body {
 
 .band-logo {
   object-fit: cover;
-  max-width: 10vh;
+  width: 10vh;
   margin-bottom: 5vh;
   position: absolute;
   top: -1vh;
-  right: 2vw;
+  right: 1.6vh;
   z-index: 5;
   background-color: rgba(211, 211, 211, 0.5);
   border-radius: 50%;
@@ -66,7 +66,7 @@ body {
 
 .page-content {
   max-width: 75vw;
-  height: 92vh;
+  height: 88vh;
   margin-top: 5vh;
   margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.623);
@@ -87,6 +87,38 @@ body {
   align-items: center;
   justify-content: flex-start;
   text-align: center;
+  margin-bottom: 1vh;
+
+  & p {
+    box-sizing: border-box;
+    font-family: "Roboto";
+    display: flex;
+    flex-direction: row;
+    padding: 5vw 0;
+    overflow: hidden;
+    margin: 0 5%;
+    width: 90%;
+    color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.589);
+    align-items: center;
+    align-content: center;
+    justify-items: space-around;
+    justify-content: space-around;
+    flex-shrink: 1;
+    font-size: 5vw;
+    color: black;
+  }
+  & img {
+    object-fit: cover;
+    display: flex;
+    max-height: 25%;
+    background-color: transparent;
+    overflow: hidden;
+
+    &:hover {
+      /*animation: opacity-to-one 5s linear forwards;*/
+    }
+  }
 
   &--extended {
     animation: width-to-90 1s ease-in-out forwards;
@@ -97,9 +129,16 @@ body {
   }
 
   &--home {
-    background-color: rgba(65, 65, 65, 0.548);
+    background-color: rgba(206, 206, 206, 0.548);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     & img {
       margin-top: 10vh;
+      width: 80%;
+      border-radius: 1vh;
+      box-shadow: 1vh 1vh 0.5vh black;
+      border: 1px solid white;
     }
   }
 
@@ -122,6 +161,24 @@ body {
 
   &--band {
     overflow-y: scroll;
+    text-align: justify;
+    word-break: break-word;
+    background-color: rgba(0, 0, 0, 0.856);
+
+    & p {
+      color: rgb(219, 219, 219);
+      background-color: transparent;
+    }
+  }
+
+  &--concert {
+    & p {
+      background-color: black;
+      height: 10vh;
+      width: 90%;
+      color: white;
+      margin-bottom: 3vh;
+    }
   }
 
   &--listen {
@@ -138,12 +195,12 @@ body {
       flex-wrap: wrap;
       margin-bottom: 1vh;
       overflow: visible;
-      margin: 0 0;
+      margin: 1vh 1vh;
       flex-basis: 40%;
       color: rgb(255, 255, 255);
-      background-color: rgb(0, 0, 0);
-
+      background-color: rgba(0, 0, 0, 0.883);
       overflow: hidden;
+      box-shadow: 1vh 1vh 0.5vh black;
       &:hover {
         opacity: 1;
         & i {
@@ -259,37 +316,6 @@ body {
     margin-left: -5vw;
     box-shadow: 0 0 1vw black;
   }
-
-  & p {
-    box-sizing: border-box;
-    font-family: "Roboto";
-    display: flex;
-    flex-direction: row;
-    padding: 5vw 0;
-    overflow: hidden;
-    margin: 0 5%;
-    width: 90%;
-    color: rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0.589);
-    align-items: center;
-    align-content: center;
-    justify-items: space-around;
-    justify-content: space-around;
-    flex-shrink: 1;
-    font-size: 5vw;
-    color: black;
-  }
-  & img {
-    object-fit: cover;
-    display: flex;
-    max-height: 25%;
-    background-color: transparent;
-    overflow: hidden;
-
-    &:hover {
-      /*animation: opacity-to-one 5s linear forwards;*/
-    }
-  }
 }
 
 .the-man {
@@ -318,12 +344,12 @@ body {
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 100vh;
+  top: 0;
   right: 3vh;
-  padding-top: 5vh;
+
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
-  max-width: 10vw;
-  height: 100vh;
+  width: 8vh;
+  height: 95vh;
   z-index: 4;
 
   align-items: center;
@@ -354,15 +380,19 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 6vw;
+    height: 10vh;
     position: relative;
     bottom: 0;
     /*background-color: rgba(15, 15, 15, 0.308);*/
     color: rgb(255, 255, 255);
     text-shadow: -0.3vw 0.3vw 0.5vw black;
     font-family: "Fascinate";
-    font-size: 3vw;
-    margin-top: 7vh;
+    font-size: 1.7vh;
+    margin-top: 1vh;
+    &:hover {
+      color: orange;
+    }
+
     &--upside-down {
       transform: rotate(180deg);
     }
@@ -373,19 +403,15 @@ body {
       color: white;
     }
     & i {
-      margin-top: -3vh;
       /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 144, 18) 60%);*/
       padding: 2vh;
       font-size: 5vh;
       &:hover {
-        color: rgb(255, 255, 255);
-        /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
         animation: bumping-icon 1s ease-in-out forwards;
+        /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
       }
     }
     &:nth-child(odd) {
-      margin-bottom: 3vh;
-
       /*box-shadow: -0.1vw -0.1vw 0.1vw rgb(255, 255, 255);*/
 
       /*border: 0.3vh solid orange;*/
@@ -395,7 +421,6 @@ body {
     }
 
     &:nth-child(even) {
-      margin-bottom: 3vh;
       /*box-shadow: -0.2vh -0.2vh 0.2vh rgb(255, 161, 37);*/
 
       /*border: 0.3vh solid white;*/
